--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -28,3 +28,27 @@
   content: "";
   padding: 0;
 }
+
+.ng-enter {
+  -webkit-transition: 0.1s linear all;
+  -o-transition: 0.1s linear all;
+  -moz-transition: 0.1s linear all;
+  opacity: 0;
+  //background: green;
+}
+.ng-enter.ng-enter-active {
+  opacity: 1;
+}
+
+.ng-leave {
+  -webkit-transition: 0.1s linear all;
+  -o-transition: 0.1s linear all;
+  -moz-transition: 0.1s linear all;
+}
+.ng-leave.ng-leave-active {
+  opacity: 0;
+}
+
+[ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak], .ng-cloak, .x-ng-cloak {
+  display: none !important;
+}
