--- a/app/views/main.html
+++ b/app/views/main.html
@@ -11,7 +11,7 @@
 
     <div class="row">
         <div class="col-md-6">
-            <input type="button" class="btn btn-default" ng-click="addLayout()" value="addCollection"/>
+            <input type="button" class="btn btn-default" ng-click="productsCtrl.open()" value="addCollection"/>
         </div>
     </div>
 </div>
