--- a/app/views/modal.html
+++ b/app/views/modal.html
@@ -1,5 +1,5 @@
     <div class="modal-header">
-        <h3 class="modal-title">I'm a modal!</h3>
+        <h3 class="modal-title">Добавить?</h3>
     </div>
     <div class="modal-body">
         <ul>
@@ -7,7 +7,6 @@
                 <a href="#" ng-click="$event.preventDefault(); selected.item = item">{{ item }}</a>
             </li>
         </ul>
-        Selected: <b>{{ selected.item }}</b>
     </div>
     <div class="modal-footer">
         <button class="btn btn-primary" type="button" ng-click="$close()">OK</button>
