--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,14 +1,20 @@
 <div class="container">
     <div class="row">
         <div class="col-md-6">
-1
++++++
+
+
+            <div tree-node="mainCtrl.parentNode"></div>
+
+
+
 
         </div>
     </div>
 
     <div class="row">
         <div class="col-md-6">
-2
+
         </div>
     </div>
 </div>
