--- a/app/views/main.html
+++ b/app/views/main.html
@@ -4,7 +4,7 @@
 +++++
 
 
-            <div tree-node="mainCtrl.parentNode"></div>
+            <div tree-node="mainCtrl.parentNode">par</div>
 
 
 
